lyrics-page/k8s/overlays/dev/image-patch.yaml
  
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lyrics-page
spec:
  template:
    spec:
      containers:
        - name: lyrics-page
          image: example.org/right-lyrics/lyrics-page:latest
