lyrics-page/k8s/overlays/dev/resources_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lyrics-page
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: lyrics-page
          resources:
            limits:
              memory: 256Mi
              cpu: 200m
            requests:
              memory: 256Mi
              cpu: 200m
