lyrics-page/k8s/overlays/dev/page-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: page
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: 128k
spec:
  rules:
    - host: right.lyrics
      http:
        paths:
          - path: /
            backend:
              serviceName: lyrics-page
              servicePort: 8080
